# EclipseEngine

./: CMakeLists.txt  Compile_Shaders.bat  LICENSE.txt  NOTESInFinnish  README.md  UntilitedGameEngine.h  main.cpp
.github/ISSUE_TEMPLATE/: bug-report.md
Core/Camera/: Camera.cpp  Camera.h
Core/Debugging/Functions/: ASSERT.h  UGE_ASSERTS.h
Core/Debugging/Profiler/: Profiler.cpp
Core/ErrorHandling/: ErrorMessage.h
Core/Graphics/: Graphics.cpp  Graphics.h
Core/Graphics/Dx11/: Dx11Renderer.cpp  Dx11Renderer.h
Core/Graphics/Texture/: Texture.cpp  Texture.h
Core/Graphics/Vulkan/: ScoreCounter.h  VulkanRender.cpp  VulkanRender.h
Core/Graphics/Vulkan/VulkanPipeline/: VulkanPipeline.cpp  VulkanPipeline.h
Core/Graphics/Vulkan/VulkanSwapchain/: VulkanSwapchain.cpp  VulkanSwapchain.h
Core/Gui/: MakeGui.cpp
Core/Instances/: Instance.h  Vertex.h
Core/Instances/Instances/: Object.h  World.h
Core/Instances/Instances/Mesh/: Mesh.h
Core/Instances/Instances/Mesh/DX11/: MeshDX11.cpp  MeshDX11.h
Core/Instances/Instances/Mesh/Vulkan/: MeshVulkan.cpp  MeshVulkan.h
Core/Libs/ImGui/: imgui_widgets.cpp
Core/Misc/Colission/: Colission.cpp  Colission.h
Core/Multiplatform/: UntilitedPlatform.h
Core/Runtime/: Engine.cpp  Engine.h
Core/Services/: Raycasting.cpp  Raycasting.h
Core/SetupPaths/: MakeFiles.cpp  MakeFiles.h
Core/Shaders/: PixelShaderTexture.hlsl  fragment.spv  shadow_vertex.spv  vertex.spv
Core/Shaders/Source/: fragment.glsl  shadow_vertex.glsl  vertex.glsl
Core/UntilitedPhysics/: Physics.cpp
Core/Variables/: GLOBALS.cpp
Core/Vulkan/: VulkanHelpers.h
Core/Window/: Window.cpp  Window.h
Editor/Camera/: CameraControl.cpp  CameraControl.h
Editor/Gui/: MakeGui.cpp  MakeGui.h
Editor/Services/: Raycasting.cpp
Shaders/: vertex.spv
Shaders/Source/: vertex.glsl
include/: CameraControl.h  GLOBALS.h  Instance.h  Object.h
include/Math/: FLOAT3.h  INT3.h  LoadINT.h  M_Utils.h  Matrix4x4.h  MatrixLookAtLH.h  StoreFloat.h  TransformNormal.h  UntilitedMath.h  Variables.h  Vector2.h  Vector3.h  Vector4.h
